force-app/main/default/objects/Transaction_Line_Item__c/Transaction_Line_Item__c.object-meta.xml
<CustomObject>
    <label>Transaction Line Item</label>
    <nameField>
        <displayFormat>TransactionLineItem-{0000}</displayFormat>
        <label>Transaction Line Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Transaction Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>