force-app/main/default/objects/Transaction_Line_Item__c/fields/Annual_Income_Based_on_up_to_2_Mo_Prior__c.field-meta.xml
<CustomField>
    <fullName>Annual_Income_Based_on_up_to_2_Mo_Prior__c</fullName>
    <formula>IF( NOT(ISPICKVAL( Income_Source__c, &quot;Food Stamps&quot;)), 

 ( Income_2_Mo_Prior__c + Income_1_Mo_Prior__c + Income_Verification_Mo__c)*4,

0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Annual Income, Based on up to 2 Mo Prior</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>