force-app/main/default/objects/Transaction_Line_Item__c/fields/Case_Record__c.field-meta.xml
<CustomField>
    <fullName>Case_Record__c</fullName>
    <label>Case Record</label>
    <referenceTo>Case_Record__c</referenceTo>
    <relationshipLabel>Transaction Line Items</relationshipLabel>
    <relationshipName>Transaction_Line_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>