force-app/main/default/objects/Transaction_Line_Item__c/fields/Check_Number_Savings_Match__c.field-meta.xml
<CustomField>
    <fullName>Check_Number_Savings_Match__c</fullName>
    <label>Check Number, Savings Match</label>
    <length>15</length>
    <type>Text</type>
</CustomField>