force-app/main/default/objects/Transaction_Line_Item__c/fields/Conviction__c.field-meta.xml
<CustomField>
    <fullName>Conviction__c</fullName>
    <label>Conviction</label>
    <length>100</length>
    <type>Text</type>
</CustomField>