force-app/main/default/objects/Transaction_Line_Item__c/fields/Conviction_CFTS_Days__c.field-meta.xml
<CustomField>
    <fullName>Conviction_CFTS_Days__c</fullName>
    <inlineHelpText>Credit for time served, in days.</inlineHelpText>
    <label>Conviction CFTS (Days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>