force-app/main/default/objects/Transaction_Line_Item__c/fields/Conviction_Date__c.field-meta.xml
<CustomField>
    <fullName>Conviction_Date__c</fullName>
    <description>Changed field label to Disposition Date as part of Aug 2018 Incoming Participant Data cleanup.</description>
    <inlineHelpText>If exact date is not known, estimate to best of ability. Field formerly labeled &quot;Conviction Date&quot;.</inlineHelpText>
    <label>Disposition Date</label>
    <type>Date</type>
</CustomField>