force-app/main/default/objects/Transaction_Line_Item__c/fields/Conviction_Notes__c.field-meta.xml
<CustomField>
    <fullName>Conviction_Notes__c</fullName>
    <inlineHelpText>Enter notes specific to this conviction. Do not enter general Progress Notes.</inlineHelpText>
    <label>Conviction Notes</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>