force-app/main/default/objects/Transaction_Line_Item__c/fields/Conviction_Outcome__c.field-meta.xml
<CustomField>
    <fullName>Conviction_Outcome__c</fullName>
    <description>Changed to multi-picklist in February 2020.</description>
    <inlineHelpText>Select all values that apply to conviction.</inlineHelpText>
    <label>Conviction Outcome</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Supervision</fullName>
            </value>
            <value>
                <fullName>Probation</fullName>
            </value>
            <value>
                <fullName>Incarcerated (Prison)</fullName>
            </value>
            <value>
                <fullName>Incarcerated (Jail)</fullName>
            </value>
            <value>
                <fullName>Found Guilty</fullName>
            </value>
            <value>
                <fullName>Conditional Discharge</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>