force-app/main/default/objects/Transaction_Line_Item__c/fields/Conviction_Report_Type__c.field-meta.xml
<CustomField>
    <fullName>Conviction_Report_Type__c</fullName>
    <formula>if (not(isblank(Service_Entry__c)), text (Service_Entry__r.Conviction_Type__c), &quot;Verified&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Conviction Report Type</label>
    <type>Text</type>
</CustomField>