force-app/main/default/objects/Transaction_Line_Item__c/fields/Conviction_Sealed_Date__c.field-meta.xml
<CustomField>
    <fullName>Conviction_Sealed_Date__c</fullName>
    <description>Tracked starting in February 2016.</description>
    <inlineHelpText>Enter if applicable.</inlineHelpText>
    <label>Conviction Sealed Date</label>
    <type>Date</type>
</CustomField>