force-app/main/default/objects/Transaction_Line_Item__c/fields/Conviction_Sentence_Months__c.field-meta.xml
<CustomField>
    <fullName>Conviction_Sentence_Months__c</fullName>
    <inlineHelpText>Length of sentence, in months.</inlineHelpText>
    <label>Conviction Sentence (Months)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>