force-app/main/default/objects/Transaction_Line_Item__c/fields/Conviction_Type__c.field-meta.xml
<CustomField>
    <fullName>Conviction_Type__c</fullName>
    <label>Conviction Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Misdemeanor</fullName>
            </value>
            <value>
                <fullName>Felony</fullName>
            </value>
            <value>
                <fullName>Ordinance Violation</fullName>
            </value>
            <value>
                <fullName>Not Specified</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>