force-app/main/default/objects/Transaction_Line_Item__c/fields/Date_on_Check_Savings_Match__c.field-meta.xml
<CustomField>
    <fullName>Date_on_Check_Savings_Match__c</fullName>
    <label>Date on Check, Savings Match</label>
    <type>Date</type>
</CustomField>