force-app/main/default/objects/Transaction_Line_Item__c/fields/Financial_Assistance_Accessed_Through__c.field-meta.xml
<CustomField>
    <fullName>Financial_Assistance_Accessed_Through__c</fullName>
    <label>Financial Assistance Accessed Through</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Retention Services</fullName>
            </value>
            <value>
                <fullName>Advancement Services</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>