force-app/main/default/objects/Transaction_Line_Item__c/fields/Income_1_Mo_Prior__c.field-meta.xml
<CustomField>
    <fullName>Income_1_Mo_Prior__c</fullName>
    <description>Requires Permission Set to edit. Had character length limit of 4 characters prior to 1/27/2017. Changed to 5 characters on 1/27/2017.</description>
    <label>Income, 1 Mo. Prior</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>