force-app/main/default/objects/Transaction_Line_Item__c/fields/Income_Source__c.field-meta.xml
<CustomField>
    <fullName>Income_Source__c</fullName>
    <description>Requires Permission Set to edit. EITC sparsely collected and completely phased out as of 2017.</description>
    <label>Income Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No Income</fullName>
            </value>
            <value>
                <fullName>Employment</fullName>
            </value>
            <value>
                <fullName>Unemployment</fullName>
            </value>
            <value>
                <fullName>SSI/SSDI</fullName>
            </value>
            <value>
                <fullName>Child Support</fullName>
            </value>
            <value>
                <fullName>TANF</fullName>
            </value>
            <value>
                <fullName>Food Stamps</fullName>
            </value>
            <value>
                <fullName>Family/Friend</fullName>
            </value>
            <value>
                <fullName>General Assistance Program</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>EITC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>