force-app/main/default/objects/Transaction_Line_Item__c/fields/Income_Verification_Mo__c.field-meta.xml
<CustomField>
    <fullName>Income_Verification_Mo__c</fullName>
    <description>Requires Permission Set to edit. Had character length limit of 4 characters prior to 1/27/2017. Changed to 5 characters on 1/27/2017.</description>
    <label>Income, Verification Mo.</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>