force-app/main/default/objects/Transaction_Line_Item__c/fields/Income_Verification_Year__c.field-meta.xml
<CustomField>
    <fullName>Income_Verification_Year__c</fullName>
    <formula>Income_Verification_Mo__c * 12</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Income Verification, Year.</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>