force-app/main/default/objects/Transaction_Line_Item__c/fields/Legacy_Approved_By_Access__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Approved_By_Access__c</fullName>
    <inlineHelpText>Initials of staff member who approved original Financial Assistance record in Access database.</inlineHelpText>
    <label>Legacy Approved By (Access)</label>
    <length>10</length>
    <type>Text</type>
</CustomField>