force-app/main/default/objects/Transaction_Line_Item__c/fields/Legacy_Conviction_Report_Type__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Conviction_Report_Type__c</fullName>
    <label>Legacy Conviction Report Type</label>
    <length>10</length>
    <type>Text</type>
</CustomField>