force-app/main/default/objects/Transaction_Line_Item__c/fields/Legacy_ConvictionsID_Access__c.field-meta.xml
<CustomField>
    <fullName>Legacy_ConvictionsID_Access__c</fullName>
    <externalId>true</externalId>
    <inlineHelpText>From Convictions table in legacy Access database.</inlineHelpText>
    <label>Legacy ConvictionsID (Access)</label>
    <length>10</length>
    <type>Text</type>
</CustomField>