force-app/main/default/objects/Transaction_Line_Item__c/fields/Legacy_FA_ID_from_Access__c.field-meta.xml
<CustomField>
    <fullName>Legacy_FA_ID_from_Access__c</fullName>
    <externalId>true</externalId>
    <inlineHelpText>From Financial Assistance table in legacy Access database.</inlineHelpText>
    <label>Legacy FA ID (from Access)</label>
    <length>10</length>
    <type>Text</type>
</CustomField>