force-app/main/default/objects/Transaction_Line_Item__c/fields/Progress_Note_from_Service_Entry__c.field-meta.xml
<CustomField>
    <fullName>Progress_Note_from_Service_Entry__c</fullName>
    <formula>Service_Entry__r.Progress_Note_Short__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Progress Note from Service Entry</label>
    <type>Text</type>
</CustomField>