force-app/main/default/objects/Transaction_Line_Item__c/fields/Related_to_Network__c.field-meta.xml
<CustomField>
    <fullName>Related_to_Network__c</fullName>
    <label>Related to Network</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Chicago Foundation for Women</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>