force-app/main/default/objects/Transaction_Line_Item__c/fields/Service_Entry__c.field-meta.xml
<CustomField>
    <fullName>Service_Entry__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Entry</label>
    <referenceTo>Client_Session__c</referenceTo>
    <relationshipLabel>Transaction Line Items</relationshipLabel>
    <relationshipName>Transaction_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>