force-app/main/default/objects/Transaction_Line_Item__c/fields/Service_Entry_Name__c.field-meta.xml
<CustomField>
    <fullName>Service_Entry_Name__c</fullName>
    <formula>Service_Entry__r.Service_Entry_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Service Entry Name</label>
    <type>Text</type>
</CustomField>