force-app/main/default/objects/Transaction_Line_Item__c/fields/Transaction_Notes__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Notes__c</fullName>
    <inlineHelpText>Enter notes specific to this transaction, such as check number. Do not enter general Progress Notes.</inlineHelpText>
    <label>Transaction Notes</label>
    <type>TextArea</type>
</CustomField>