force-app/main/default/objects/Transaction_Line_Item__c/fields/Transaction_Type__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Type__c</fullName>
    <label>Transaction Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Clothing-Interview</fullName>
            </value>
            <value>
                <fullName>Clothing-Work</fullName>
            </value>
            <value>
                <fullName>Daycare</fullName>
            </value>
            <value>
                <fullName>Eyeglasses</fullName>
            </value>
            <value>
                <fullName>Personal Items</fullName>
            </value>
            <value>
                <fullName>Transportation</fullName>
            </value>
            <value>
                <fullName>Rent</fullName>
            </value>
            <value>
                <fullName>Utilities</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Savings Voucher</fullName>
            </value>
            <value>
                <fullName>Savings Contribution</fullName>
            </value>
            <value>
                <fullName>Savings Withdrawal</fullName>
            </value>
            <value>
                <fullName>Great Wall Ending Balance, Self-Reported</fullName>
            </value>
            <value>
                <fullName>Savings Program Ending Balance, Verified</fullName>
            </value>
            <value>
                <fullName>Savings Match</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>