force-app/main/default/objects/Transaction_Line_Item__c/fields/Years_Since_Conviction_Date__c.field-meta.xml
<CustomField>
    <fullName>Years_Since_Conviction_Date__c</fullName>
    <formula>(today()- Conviction_Date__c)/365</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Years Since Conviction Date</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>