force-app/main/default/objects/Transaction_Line_Item__c/recordTypes/Bus_Pass.recordType-meta.xml
<RecordType>
    <fullName>Bus_Pass</fullName>
    <active>false</active>
    <label>Bus Pass</label>
</RecordType>