force-app/main/default/objects/Transaction_Line_Item__c/recordTypes/Conviction_History_Self_Reported.recordType-meta.xml
<RecordType>
    <fullName>Conviction_History_Self_Reported</fullName>
    <active>true</active>
    <label>Conviction History, Self-Reported</label>
</RecordType>