force-app/main/default/objects/Transaction_Line_Item__c/recordTypes/Conviction_History_Verified.recordType-meta.xml
<RecordType>
    <fullName>Conviction_History_Verified</fullName>
    <active>true</active>
    <label>Conviction History, Verified</label>
</RecordType>