force-app/main/default/objects/Transaction_Line_Item__c/recordTypes/Financial_Assistance.recordType-meta.xml
<RecordType>
    <fullName>Financial_Assistance</fullName>
    <active>true</active>
    <label>Financial Assistance</label>
</RecordType>