force-app/main/default/objects/Transaction_Line_Item__c/recordTypes/Financial_Savings.recordType-meta.xml
<RecordType>
    <fullName>Financial_Savings</fullName>
    <active>true</active>
    <label>Financial Savings</label>
</RecordType>