force-app/main/default/objects/Transaction_Line_Item__c/recordTypes/Income_Verification.recordType-meta.xml
<RecordType>
    <fullName>Income_Verification</fullName>
    <active>true</active>
    <label>Income Verification</label>
</RecordType>